k8s-yaml-cookbook/02-networking/service-clusterip.yaml
# Internal stable virtual IP; common backend for Ingress.
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  type: ClusterIP
  selector:
    app: <app-name>
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
