k8s-yaml-cookbook/02-networking/service-loadbalancer.yaml
# Requests an external load balancer from a supported cloud/provider implementation.
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  type: LoadBalancer
  selector:
    app: <app-name>
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
