k8s-yaml-cookbook/02-networking/service-nodeport.yaml
# Exposes a Service on a port on each Node. NodePort range is commonly 30000-32767.
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  type: NodePort
  selector:
    app: <app-name>
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080 # Optional; omit to let Kubernetes allocate one.
      protocol: TCP
